tests/compile-fail/cfg/multi.stderr
error[E0428]: the name `FOO` is defined multiple times
  --> tests/compile-fail/cfg/multi.rs:6:1
   |
6  | / bitflags! {
7  | |     pub struct Flags: u32 {
8  | |         #[cfg(target_os = "linux")]
9  | |         const FOO = 1;
...  |
12 | |     }
13 | | }
   | | ^
   | | |
   | |_`FOO` redefined here
   |   previous definition of the value `FOO` here
   |
   = note: `FOO` must be defined only once in the value namespace of this trait
   = note: this error originates in the macro `__impl_all_bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
